fixed the margin on the bottom so the footer doesn't overlap the store cards

--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -10,7 +10,7 @@
 	margin-right: 5%;
 	border-radius: 30px;
 	row-gap: 30px;
-	margin-bottom: 5%;
+	margin-bottom: 6%;
 }
 
 .store-details {
